--- a/index.html
+++ b/index.html
@@ -2,9 +2,110 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Master Service</title>
+	<title>MSG Equipment</title>
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/main.css">
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+	<link rel="apple-touch-icon" href="img/favicon.png" sizes="50x50">
+	<link rel="apple-touch-icon" href="img/favicon.png" sizes="72x72">
+	<!-- End favicon -->
 </head>
 <body>
-	
+	<header>
+		<nav>
+			<a href="#">
+			<img class="logo" src="https://servicems.eu/img/evropa-logo-15476312775.jpg" alt="servicems.ru">
+			</a>
+			<ul>
+				<li><a href="#">Оборудование</a>
+					<ul>
+						<li><a href="#">Для диагностики стартеров и генераторов</a></li>
+						<li><a href="#">Для диагностики автокондиционеров</a></li>
+						<li><a href="#">Для диагностики и ремонта амортизаторов</a></li>
+						<li><a href="#">Для диагностики и ремонта тормозных суппортов</a></li>
+						<li><a href="#">Для диагностики агрегатов ГУР</a></li>
+						<li><a href="#">Для диагностики агрегатов ЭУР (EPS)</a></li>
+						<li><a href="#">Для промывки сажевых фильтров</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Специнструмент</a>
+					<ul>
+						<li><a href="#">Для диагностики стартеров и генераторов</a></li>
+						<li><a href="#">Для диагностики автокондиционеров</a></li>
+						<li><a href="#">Для диагностики и ремонта амортизаторов</a></li>
+						<li><a href="#">Для диагностики и ремонта тормозных суппортов</a></li>
+						<li><a href="#">Для диагностики агрегатов ГУР</a></li>
+						<li><a href="#">Для диагностики агрегатов ЭУР (EPS)</a></li>
+						<li><a href="#">Для промывки сажевых фильтров</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Комплектующие</a>
+					<ul>
+						<li><a href="#">Для диагностики стартеров и генераторов</a></li>
+						<li><a href="#">Для диагностики автокондиционеров</a></li>
+						<li><a href="#">Для диагностики и ремонта амортизаторов</a></li>
+						<li><a href="#">Для диагностики и ремонта тормозных суппортов</a></li>
+						<li><a href="#">Для диагностики агрегатов ГУР</a></li>
+						<li><a href="#">Для диагностики агрегатов ЭУР (EPS)</a></li>
+						<li><a href="#">Для промывки сажевых фильтров</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Обучение</a></li>
+				<li><a href="#">Информация</a></li>
+				<li><a href="#">Блог</a></li>
+			</ul>
+			<!-- Search -->
+		</nav>
+		<!-- Slideshow container -->
+		<div class="slideshow-container">
+			<img src="https://servicems.ru/modules/homeslider/images/e49159932037a45bc31465259b8f97c211b9dbf6_1170X355.jpg" alt="slideshow">
+		</div>
+	</header>
+	<section class="popular-product-list">
+		<h3>Популярное</h3>
+
+		<div class="popular-product">
+			<a href="#"><img src="https://servicems.ru/761-large_default/stend-msg-ms002-com.jpg" alt="MS002 COM"></a>
+		</div>
+		<div class="popular-product">
+			<a href="#"><img src="https://servicems.ru/761-large_default/stend-msg-ms002-com.jpg" alt="MS002 COM"></a>
+		</div>
+		<div class="popular-product">
+			<a href="#"><img src="https://servicems.ru/761-large_default/stend-msg-ms002-com.jpg" alt="MS002 COM"></a>
+		</div>
+	</section>
+	<section class="about-company">
+		<h3>О компании</h3>
+		<div class="text">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos eaque molestias odio aut eius animi. Impedit temporibus nisi accusamus.
+		</div>
+		<img class="our-company" src="" alt="">
+	</section>
+	<section class="blog">
+		<h3>Блог</h3>
+			<div class="blog-post">
+				<a href=""><img src="" alt="">
+				</a>
+			</div>
+			<div class="blog-post">
+				<a href=""><img src="" alt="">
+				</a>
+			</div>
+			<div class="blog-post">
+				<a href=""><img src="" alt="">
+				</a>
+			</div>
+			<div class="blog-post">
+				<a href=""><img src="" alt=""></a>
+
+			</div>
+	</section>
+	<footer>
+		<div class="social"></div>
+		<div class="info"></div>
+		<div class="help"></div>
+		<div class="contact"></div>
+	</footer>
 </body>
 </html>
