--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<header class="site-header">
-		<div class="header-container">
+		<div class="header-container container">
 			<a href="#" class="">
 				<img class="logo" src="https://servicems.eu/img/evropa-logo-15476312775.jpg" alt="servicems.ru">
 			</a>
@@ -60,10 +60,11 @@
 			</nav>
 		</div>
 	</header>
-		<div class="slideshow-container">
+		<div class="slideshow-container container">
 			<img class="slideshow" src="https://servicems.ru/modules/homeslider/images/e49159932037a45bc31465259b8f97c211b9dbf6_1170X355.jpg" alt="slideshow">
 		</div>
-		<section class="popular-product-section">
+	<section class="popular-product-section">
+		<div class="popular-container">
 			<h3 class="popular-title">Популярное</h3>
 			<ul class="popular-product-list">
 				<li class="popular-product">
@@ -76,33 +77,50 @@
 					<a href="#"><img src="https://servicems.ru/761-large_default/stend-msg-ms002-com.jpg" alt="MS002 COM"></a>
 				</li>
 			</ul>
-		</section>
-		<section class="about-company">
+		</div>
+	</section>
+	<section class="about-company">
+		<div class="company-container container">
 			<h3 class="company">О компании</h3>
 			<div class="text">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos eaque molestias odio aut eius animi. Impedit temporibus nisi accusamus.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos eaque molestias odio aut eius animi. Impedit temporibus nisi accusamus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque et aut asperiores doloremque labore cupiditate voluptas, reprehenderit obcaecati, voluptatibus, esse expedita reiciendis illum assumenda quis aliquam fuga dolorum non. Alias.
 			</div>
-			<img class="our-company" src="" alt="">
-		</section>
-		<section class="blog">
-			<h3>Блог</h3>
-				<div class="blog-post">
-					<a href=""><img src="" alt="">
+			<img class="our-company" src="https://servicems.ru/img/cms/our-team-new-img.jpg" alt="about-company">
+		</div>
+	</section>
+	<section class="blog">
+		<div class="blog-container comtainer">
+			<h3 class="blog-title">Блог</h3>
+				<article class="blog-post">
+					<a href="#">
+						<img class="blog-img" src="https://servicems.ru/modules//smartblog/images/589-single-default.jpg" alt="">
+						<h4>Как происходит упаковка оборудования при отправке?</h4>
+						<p>Качественная и профессиональная упаковка оборудования MSG Equipment для доставки клиентам. Максимальные меры безопасности при перевозке.</p>
 					</a>
-				</div>
-				<div class="blog-post">
-					<a href=""><img src="" alt="">
+				</article> 
+				<article class="blog-post">
+					<a href="#">
+						<img class="blog-img" src="https://servicems.ru/modules//smartblog/images/589-single-default.jpg" alt="">
+						<h4>Как происходит упаковка оборудования при отправке?</h4>
+						<p>Качественная и профессиональная упаковка оборудования MSG Equipment для доставки клиентам. Максимальные меры безопасности при перевозке.</p>
 					</a>
-				</div>
-				<div class="blog-post">
-					<a href=""><img src="" alt="">
+				</article> 
+				<article class="blog-post">
+					<a href="#">
+						<img class="blog-img" src="https://servicems.ru/modules//smartblog/images/589-single-default.jpg" alt="">
+						<h4>Как происходит упаковка оборудования при отправке?</h4>
+						<p>Качественная и профессиональная упаковка оборудования MSG Equipment для доставки клиентам. Максимальные меры безопасности при перевозке.</p>
 					</a>
-				</div>
-				<div class="blog-post">
-					<a href=""><img src="" alt=""></a>
-
-				</div>
-		</section>
+				</article> 
+				<article class="blog-post">
+					<a href="#">
+						<img class="blog-img" src="https://servicems.ru/modules//smartblog/images/589-single-default.jpg" alt="">
+						<h4>Как происходит упаковка оборудования при отправке?</h4>
+						<p>Качественная и профессиональная упаковка оборудования MSG Equipment для доставки клиентам. Максимальные меры безопасности при перевозке.</p>
+					</a>
+				</article> 
+		</div>
+	</section>
 		<footer>
 			<div class="social"></div>
 			<div class="info"></div>
