--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		</div>
 	</section>
 	<section class="blog">
-		<div class="blog-container comtainer">
+		<div class="blog-container container">
 			<h3 class="blog-title">Блог</h3>
 				<article class="blog-post">
 					<a href="#">
