--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<header class="site-header">
 		<div class="header-container container">
-			<a href="#" class="">
+			<a href="product-list.html" class=".logo-link">
 				<img class="logo" src="https://servicems.eu/img/evropa-logo-15476312775.jpg" alt="servicems.ru">
 			</a>
 			<nav>
@@ -60,12 +60,12 @@
 			</nav>
 		</div>
 	</header>
-		<div class="slideshow-container container">
+		<div class="container">
 			<img class="slideshow" src="https://servicems.ru/modules/homeslider/images/e49159932037a45bc31465259b8f97c211b9dbf6_1170X355.jpg" alt="slideshow">
 		</div>
 	<section class="popular-product-section">
-		<div class="popular-container">
-			<h3 class="popular-title">Популярное</h3>
+		<div class="container">
+			<h3 class="section-title">Популярное</h3>
 			<ul class="popular-product-list">
 				<li class="popular-product">
 					<a href="#"><img src="https://servicems.ru/761-large_default/stend-msg-ms002-com.jpg" alt="MS002 COM"></a>
@@ -80,45 +80,49 @@
 		</div>
 	</section>
 	<section class="about-company">
-		<div class="company-container container">
-			<h3 class="company">О компании</h3>
-			<div class="text">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos eaque molestias odio aut eius animi. Impedit temporibus nisi accusamus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque et aut asperiores doloremque labore cupiditate voluptas, reprehenderit obcaecati, voluptatibus, esse expedita reiciendis illum assumenda quis aliquam fuga dolorum non. Alias.
+		<div class="container">
+			<h3 class="section-title">О компании</h3>
+			<div class="company-container">
+				<div class="text"><p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos eaque molestias odio aut eius animi. Impedit temporibus nisi accusamus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque et aut asperiores doloremque labore cupiditate voluptas, reprehenderit obcaecati, voluptatibus, esse expedita reiciendis illum assumenda quis aliquam fuga dolorum non. Alias. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis dolor veniam vel dicta, officiis quaerat alias deserunt quisquam, minima commodi vero, nobis natus. Sed pariatur officiis harum velit, quasi, reprehenderit.
+					</p></div>
+				<img class="our-company" src="https://servicems.ru/img/cms/our-team-new-img.jpg" alt="about-company">
 			</div>
-			<img class="our-company" src="https://servicems.ru/img/cms/our-team-new-img.jpg" alt="about-company">
 		</div>
 	</section>
 	<section class="blog">
-		<div class="blog-container container">
-			<h3 class="blog-title">Блог</h3>
-				<article class="blog-post">
-					<a href="#">
-						<img class="blog-img" src="https://servicems.ru/modules//smartblog/images/589-single-default.jpg" alt="">
-						<h4>Как происходит упаковка оборудования при отправке?</h4>
-						<p>Качественная и профессиональная упаковка оборудования MSG Equipment для доставки клиентам. Максимальные меры безопасности при перевозке.</p>
-					</a>
-				</article> 
-				<article class="blog-post">
-					<a href="#">
-						<img class="blog-img" src="https://servicems.ru/modules//smartblog/images/589-single-default.jpg" alt="">
-						<h4>Как происходит упаковка оборудования при отправке?</h4>
-						<p>Качественная и профессиональная упаковка оборудования MSG Equipment для доставки клиентам. Максимальные меры безопасности при перевозке.</p>
-					</a>
-				</article> 
-				<article class="blog-post">
-					<a href="#">
-						<img class="blog-img" src="https://servicems.ru/modules//smartblog/images/589-single-default.jpg" alt="">
-						<h4>Как происходит упаковка оборудования при отправке?</h4>
-						<p>Качественная и профессиональная упаковка оборудования MSG Equipment для доставки клиентам. Максимальные меры безопасности при перевозке.</p>
-					</a>
-				</article> 
-				<article class="blog-post">
-					<a href="#">
-						<img class="blog-img" src="https://servicems.ru/modules//smartblog/images/589-single-default.jpg" alt="">
-						<h4>Как происходит упаковка оборудования при отправке?</h4>
-						<p>Качественная и профессиональная упаковка оборудования MSG Equipment для доставки клиентам. Максимальные меры безопасности при перевозке.</p>
-					</a>
-				</article> 
+		<div class="container">
+			<h3 class="section-title">Блог</h3>
+				<div class="blog-posts">
+					<article class="blog-post">
+						<a href="#" class="blog-post__link">
+							<img class="blog-img" src="https://servicems.ru/modules//smartblog/images/589-single-default.jpg" alt="">
+							<h4>Как происходит упаковка оборудования при отправке?</h4>
+							<p>Качественная и профессиональная упаковка оборудования MSG Equipment для доставки клиентам. Максимальные меры безопасности при перевозке.</p>
+						</a>
+					</article> 
+					<article class="blog-post">
+						<a href="#" class="blog-post__link">
+							<img class="blog-img" src="https://servicems.ru/modules//smartblog/images/589-single-default.jpg" alt="">
+							<h4>Как происходит упаковка оборудования при отправке?</h4>
+							<p>Качественная и профессиональная упаковка оборудования MSG Equipment для доставки клиентам. Максимальные меры безопасности при перевозке.</p>
+						</a>
+					</article> 
+					<article class="blog-post">
+						<a href="#" class="blog-post__link">
+							<img class="blog-img" src="https://servicems.ru/modules//smartblog/images/589-single-default.jpg" alt="">
+							<h4>Как происходит упаковка оборудования при отправке?</h4>
+							<p>Качественная и профессиональная упаковка оборудования MSG Equipment для доставки клиентам. Максимальные меры безопасности при перевозке.</p>
+						</a>
+					</article> 
+					<article class="blog-post">
+						<a href="#" class="blog-post__link">
+							<img class="blog-img" src="https://servicems.ru/modules//smartblog/images/589-single-default.jpg" alt="">
+							<h4>Как происходит упаковка оборудования при отправке?</h4>
+							<p>Качественная и профессиональная упаковка оборудования MSG Equipment для доставки клиентам. Максимальные меры безопасности при перевозке.</p>
+						</a>
+					</article>
+				</div>
 		</div>
 	</section>
 		<footer>
